--- a/Assignment 2/3 Community Detection/main.ipynb
+++ b/Assignment 2/3 Community Detection/main.ipynb
@@ -47,10 +47,8 @@
     "        for node in community:\n",
     "            node_community_mapping[node] = i\n",
     "\n",
-    "    # Draw the graph\n",
-    "    pos = nx.spring_layout(G)  # You can use different layout algorithms\n",
+    "    pos = nx.spring_layout(G)\n",
     "\n",
-    "    # Draw internal links in black and external links in light gray\n",
     "    internal_edges = []\n",
     "    external_edges = []\n",
     "    for edge in G.edges():\n",
@@ -61,7 +59,6 @@
     "    plt.figure(figsize=(30,10))\n",
     "    plt.subplot(1,2,1)\n",
     "    nx.draw_networkx_nodes(G, pos, node_color=[node_community_mapping[node] for node in G.nodes()], cmap=plt.cm.rainbow)\n",
-    "    #nx.draw_networkx_labels(G, pos)\n",
     "    nx.draw_networkx_edges(G, pos, edgelist=internal_edges, edge_color='black')\n",
     "    nx.draw_networkx_edges(G, pos, edgelist=external_edges, edge_color='lightgray')\n",
     "    plt.title(\"Greedy Modularity Maximization\")\n",
@@ -69,18 +66,14 @@
     "    # (b) Label Propagation Algorithm\n",
     "    label_communities = list(label_propagation_algorithm(G))\n",
     "\n",
-    "    # Create a mapping of node to community for coloring\n",
     "    node_community_mapping = {}\n",
     "\n",
-    "    # Assign colors to nodes based on the community they belong to\n",
     "    for i, community in enumerate(label_communities):\n",
     "        for node in community:\n",
     "            node_community_mapping[node] = i\n",
     "\n",
-    "    # Draw the graph\n",
-    "    pos = nx.spring_layout(G)  # You can use different layout algorithms\n",
+    "    pos = nx.spring_layout(G)\n",
     "\n",
-    "    # Draw internal links in black and external links in light gray\n",
     "    internal_edges = []\n",
     "    external_edges = []\n",
     "    for edge in G.edges():\n",
@@ -90,12 +83,11 @@
     "            external_edges.append(edge)\n",
     "    plt.subplot(1,2,2)\n",
     "    nx.draw_networkx_nodes(G, pos, node_color=[node_community_mapping[node] for node in G.nodes()], cmap=plt.cm.rainbow)\n",
-    "    #nx.draw_networkx_labels(G, pos)\n",
     "    nx.draw_networkx_edges(G, pos, edgelist=internal_edges, edge_color='black')\n",
     "    nx.draw_networkx_edges(G, pos, edgelist=external_edges, edge_color='lightgray')\n",
     "    plt.title(\"Label Propagation Algorithm\")\n",
     "    plt.suptitle(dataset)\n",
-    "    # Show the plot\n",
+    "\n",
     "    plt.show()\n",
     "    return greedy_communities, label_communities"
    ]
