--- a/Assignment 3/1 ERGMs/main.ipynb
+++ b/Assignment 3/1 ERGMs/main.ipynb
@@ -9,7 +9,8 @@
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
     "from os import listdir\n",
-    "from os.path import isfile, join"
+    "from os.path import isfile, join\n",
+    "import json"
    ]
   },
   {
@@ -87,19 +88,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'WDN_1992.txt.graphml': {'out-in': 1.4964530766420645e+28, 'in-out': -2.3824609503568767e+28, 'in-in': -1.3616898808850113e+27, 'out-out': -4.5870850429234635e+25}, 'WDN_1993.txt.graphml': {'out-in': 2.6736408856658236e+28, 'in-out': -4.808311521608881e+28, 'in-in': -1.8692119874334573e+27, 'out-out': -8.857639560423955e+24}, 'WDN_1994.txt.graphml': {'out-in': 4.901337135089561e+28, 'in-out': -8.090643757752822e+28, 'in-in': -3.0607217089062554e+27, 'out-out': 1.5310283118754217e+26}, 'WDN_1995.txt.graphml': {'out-in': 6.663250274092741e+28, 'in-out': -9.865743605573962e+28, 'in-in': -4.0275985300858266e+27, 'out-out': 3.667934032762283e+26}, 'WDN_1996.txt.graphml': {'out-in': 6.9997217431363825e+28, 'in-out': -1.0033557564560554e+29, 'in-in': -4.4842677786730423e+27, 'out-out': 6.454007321686927e+25}, 'WDN_1997.txt.graphml': {'out-in': 6.797778981905634e+28, 'in-out': -9.189254397127463e+28, 'in-in': -4.5113835394938126e+27, 'out-out': 5.656451484842425e+25}, 'WDN_1998.txt.graphml': {'out-in': 6.221560982933076e+28, 'in-out': -8.306474024935538e+28, 'in-in': -4.403169795788566e+27, 'out-out': -1.8351572086556584e+26}, 'WDN_1999.txt.graphml': {'out-in': 5.447154508224189e+28, 'in-out': -7.052093826425697e+28, 'in-in': -3.7687468722903066e+27, 'out-out': -3.870516573130386e+25}, 'WDN_2000.txt.graphml': {'out-in': 6.186054963415039e+28, 'in-out': -8.026907018228001e+28, 'in-in': -3.843986175407015e+27, 'out-out': -6.261511970843768e+26}, 'WDN_2001.txt.graphml': {'out-in': 5.795387704369832e+28, 'in-out': -7.440164027955516e+28, 'in-in': -3.863010585097557e+27, 'out-out': -7.053899729278427e+26}, 'WDN_2002.txt.graphml': {'out-in': 6.950374744521932e+28, 'in-out': -8.960834044693724e+28, 'in-in': -3.6067028169408637e+27, 'out-out': -2.9528176416311393e+25}}\n"
+      "{\n",
+      "    \"WDN_1992.txt.graphml\": {\n",
+      "        \"out-in\": 1.4964530766420645e+28,\n",
+      "        \"in-out\": -2.3824609503568767e+28,\n",
+      "        \"in-in\": -1.3616898808850113e+27,\n",
+      "        \"out-out\": -4.5870850429234635e+25\n",
+      "    },\n",
+      "    \"WDN_1993.txt.graphml\": {\n",
+      "        \"out-in\": 2.6736408856658236e+28,\n",
+      "        \"in-out\": -4.808311521608881e+28,\n",
+      "        \"in-in\": -1.8692119874334573e+27,\n",
+      "        \"out-out\": -8.857639560423955e+24\n",
+      "    },\n",
+      "    \"WDN_1994.txt.graphml\": {\n",
+      "        \"out-in\": 4.901337135089561e+28,\n",
+      "        \"in-out\": -8.090643757752822e+28,\n",
+      "        \"in-in\": -3.0607217089062554e+27,\n",
+      "        \"out-out\": 1.5310283118754217e+26\n",
+      "    },\n",
+      "    \"WDN_1995.txt.graphml\": {\n",
+      "        \"out-in\": 6.663250274092741e+28,\n",
+      "        \"in-out\": -9.865743605573962e+28,\n",
+      "        \"in-in\": -4.0275985300858266e+27,\n",
+      "        \"out-out\": 3.667934032762283e+26\n",
+      "    },\n",
+      "    \"WDN_1996.txt.graphml\": {\n",
+      "        \"out-in\": 6.9997217431363825e+28,\n",
+      "        \"in-out\": -1.0033557564560554e+29,\n",
+      "        \"in-in\": -4.4842677786730423e+27,\n",
+      "        \"out-out\": 6.454007321686927e+25\n",
+      "    },\n",
+      "    \"WDN_1997.txt.graphml\": {\n",
+      "        \"out-in\": 6.797778981905634e+28,\n",
+      "        \"in-out\": -9.189254397127463e+28,\n",
+      "        \"in-in\": -4.5113835394938126e+27,\n",
+      "        \"out-out\": 5.656451484842425e+25\n",
+      "    },\n",
+      "    \"WDN_1998.txt.graphml\": {\n",
+      "        \"out-in\": 6.221560982933076e+28,\n",
+      "        \"in-out\": -8.306474024935538e+28,\n",
+      "        \"in-in\": -4.403169795788566e+27,\n",
+      "        \"out-out\": -1.8351572086556584e+26\n",
+      "    },\n",
+      "    \"WDN_1999.txt.graphml\": {\n",
+      "        \"out-in\": 5.447154508224189e+28,\n",
+      "        \"in-out\": -7.052093826425697e+28,\n",
+      "        \"in-in\": -3.7687468722903066e+27,\n",
+      "        \"out-out\": -3.870516573130386e+25\n",
+      "    },\n",
+      "    \"WDN_2000.txt.graphml\": {\n",
+      "        \"out-in\": 6.186054963415039e+28,\n",
+      "        \"in-out\": -8.026907018228001e+28,\n",
+      "        \"in-in\": -3.843986175407015e+27,\n",
+      "        \"out-out\": -6.261511970843768e+26\n",
+      "    },\n",
+      "    \"WDN_2001.txt.graphml\": {\n",
+      "        \"out-in\": 5.795387704369832e+28,\n",
+      "        \"in-out\": -7.440164027955516e+28,\n",
+      "        \"in-in\": -3.863010585097557e+27,\n",
+      "        \"out-out\": -7.053899729278427e+26\n",
+      "    },\n",
+      "    \"WDN_2002.txt.graphml\": {\n",
+      "        \"out-in\": 6.950374744521932e+28,\n",
+      "        \"in-out\": -8.960834044693724e+28,\n",
+      "        \"in-in\": -3.6067028169408637e+27,\n",
+      "        \"out-out\": -2.9528176416311393e+25\n",
+      "    }\n",
+      "}\n"
      ]
     }
    ],
    "source": [
-    "print(weighted_degree_products)"
+    "print(json.dumps(weighted_degree_products, indent=4))"
    ]
   },
   {
@@ -129,19 +197,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'WDN_1992.txt.graphml': {'out-in': 6.205216253199511e+26, 'in-out': 3.3690232959664736e+26, 'in-in': 8.791734230703289e+26, 'out-out': 1.823251978118419e+26}, 'WDN_1993.txt.graphml': {'out-in': 1.0747067957782104e+27, 'in-out': 8.264405538470817e+26, 'in-in': 1.473559028465684e+27, 'out-out': 5.100666690838406e+26}, 'WDN_1994.txt.graphml': {'out-in': 2.118662277663826e+27, 'in-out': 1.915001942555716e+27, 'in-in': 2.704687118159687e+27, 'out-out': 1.3822273326990912e+27}, 'WDN_1995.txt.graphml': {'out-in': 3.362796575795088e+27, 'in-out': 3.1864552422556003e+27, 'in-in': 4.0549233843762106e+27, 'out-out': 2.5300876415611033e+27}, 'WDN_1996.txt.graphml': {'out-in': 3.9421097309277705e+27, 'in-out': 3.829558896449382e+27, 'in-in': 4.6284969135673634e+27, 'out-out': 3.1624501189082024e+27}, 'WDN_1997.txt.graphml': {'out-in': 4.325425190273564e+27, 'in-out': 4.190676147349733e+27, 'in-in': 4.951148501427969e+27, 'out-out': 3.582086925918769e+27}, 'WDN_1998.txt.graphml': {'out-in': 4.3256304226249006e+27, 'in-out': 4.2383988917133975e+27, 'in-in': 4.8756679295078906e+27, 'out-out': 3.6942514846343884e+27}, 'WDN_1999.txt.graphml': {'out-in': 4.0733725099081653e+27, 'in-out': 3.9795287087091004e+27, 'in-in': 4.5324970579788134e+27, 'out-out': 3.523101986832685e+27}, 'WDN_2000.txt.graphml': {'out-in': 4.6888081822887886e+27, 'in-out': 4.585661409723792e+27, 'in-in': 5.205745062530091e+27, 'out-out': 4.068717491831874e+27}, 'WDN_2001.txt.graphml': {'out-in': 4.7177351068169064e+27, 'in-out': 4.626236746330633e+27, 'in-in': 5.192994205026503e+27, 'out-out': 4.14966132902557e+27}, 'WDN_2002.txt.graphml': {'out-in': 4.6769937601812575e+27, 'in-out': 4.476085930549536e+27, 'in-in': 5.265149559060779e+27, 'out-out': 3.8984713977077557e+27}}\n"
+      "{\n",
+      "    \"WDN_1992.txt.graphml\": {\n",
+      "        \"out-in\": 6.205216253199511e+26,\n",
+      "        \"in-out\": 3.3690232959664736e+26,\n",
+      "        \"in-in\": 8.791734230703289e+26,\n",
+      "        \"out-out\": 1.823251978118419e+26\n",
+      "    },\n",
+      "    \"WDN_1993.txt.graphml\": {\n",
+      "        \"out-in\": 1.0747067957782104e+27,\n",
+      "        \"in-out\": 8.264405538470817e+26,\n",
+      "        \"in-in\": 1.473559028465684e+27,\n",
+      "        \"out-out\": 5.100666690838406e+26\n",
+      "    },\n",
+      "    \"WDN_1994.txt.graphml\": {\n",
+      "        \"out-in\": 2.118662277663826e+27,\n",
+      "        \"in-out\": 1.915001942555716e+27,\n",
+      "        \"in-in\": 2.704687118159687e+27,\n",
+      "        \"out-out\": 1.3822273326990912e+27\n",
+      "    },\n",
+      "    \"WDN_1995.txt.graphml\": {\n",
+      "        \"out-in\": 3.362796575795088e+27,\n",
+      "        \"in-out\": 3.1864552422556003e+27,\n",
+      "        \"in-in\": 4.0549233843762106e+27,\n",
+      "        \"out-out\": 2.5300876415611033e+27\n",
+      "    },\n",
+      "    \"WDN_1996.txt.graphml\": {\n",
+      "        \"out-in\": 3.9421097309277705e+27,\n",
+      "        \"in-out\": 3.829558896449382e+27,\n",
+      "        \"in-in\": 4.6284969135673634e+27,\n",
+      "        \"out-out\": 3.1624501189082024e+27\n",
+      "    },\n",
+      "    \"WDN_1997.txt.graphml\": {\n",
+      "        \"out-in\": 4.325425190273564e+27,\n",
+      "        \"in-out\": 4.190676147349733e+27,\n",
+      "        \"in-in\": 4.951148501427969e+27,\n",
+      "        \"out-out\": 3.582086925918769e+27\n",
+      "    },\n",
+      "    \"WDN_1998.txt.graphml\": {\n",
+      "        \"out-in\": 4.3256304226249006e+27,\n",
+      "        \"in-out\": 4.2383988917133975e+27,\n",
+      "        \"in-in\": 4.8756679295078906e+27,\n",
+      "        \"out-out\": 3.6942514846343884e+27\n",
+      "    },\n",
+      "    \"WDN_1999.txt.graphml\": {\n",
+      "        \"out-in\": 4.0733725099081653e+27,\n",
+      "        \"in-out\": 3.9795287087091004e+27,\n",
+      "        \"in-in\": 4.5324970579788134e+27,\n",
+      "        \"out-out\": 3.523101986832685e+27\n",
+      "    },\n",
+      "    \"WDN_2000.txt.graphml\": {\n",
+      "        \"out-in\": 4.6888081822887886e+27,\n",
+      "        \"in-out\": 4.585661409723792e+27,\n",
+      "        \"in-in\": 5.205745062530091e+27,\n",
+      "        \"out-out\": 4.068717491831874e+27\n",
+      "    },\n",
+      "    \"WDN_2001.txt.graphml\": {\n",
+      "        \"out-in\": 4.7177351068169064e+27,\n",
+      "        \"in-out\": 4.626236746330633e+27,\n",
+      "        \"in-in\": 5.192994205026503e+27,\n",
+      "        \"out-out\": 4.14966132902557e+27\n",
+      "    },\n",
+      "    \"WDN_2002.txt.graphml\": {\n",
+      "        \"out-in\": 4.6769937601812575e+27,\n",
+      "        \"in-out\": 4.476085930549536e+27,\n",
+      "        \"in-in\": 5.265149559060779e+27,\n",
+      "        \"out-out\": 3.8984713977077557e+27\n",
+      "    }\n",
+      "}\n"
      ]
     }
    ],
    "source": [
-    "print(weighted_degrees_sums)"
+    "print(json.dumps(weighted_degrees_sums, indent=4))"
    ]
   },
   {
@@ -162,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -241,10 +376,7 @@
     }
    ],
    "source": [
-    "import json\n",
-    "\n",
-    "pretty = json.dumps(assortivity_coefficient, indent=4)\n",
-    "print(pretty)"
+    "print(json.dumps(assortivity_coefficient, indent=4))"
    ]
   }
  ],
