--- a/Assignment 3/1 ERGMs/main.ipynb
+++ b/Assignment 3/1 ERGMs/main.ipynb
@@ -25,7 +25,7 @@
     "files = [f for f in listdir(path) if isfile(join(path, f))]\n",
     "gmls = [nx.read_graphml(path + f) for f in files]\n",
     "\n",
-    "graph_names = {k: v for k, v in zip(files, gmls)}"
+    "graphs = {k: v for k, v in zip(files, gmls)}"
    ]
   },
   {
@@ -47,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "strength_assortativities = {graph_name: calc_strength_assortativity(G) for graph_name, G in graph_names.items()}"
+    "strength_assortativities = {graph_name: calc_strength_assortativity(G, directed=True) for graph_name, G in graphs.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -65,37 +65,37 @@
      "text": [
       "Strength assortativities:\n",
       "WDN_1992.txt.graphml\n",
-      "{'in-in': -0.04868776409103547, 'in-out': -0.0466474043409241, 'out-in': -0.05986979308699113, 'out-out': -0.05760318920541253}\n",
+      "{'in-in': -0.048687764091035264, 'in-out': -0.0466474043409239, 'out-in': -0.05986979308699117, 'out-out': -0.05760318920541264}\n",
       "\n",
       "WDN_1993.txt.graphml\n",
-      "{'in-in': -0.06537929984057984, 'in-out': -0.06218986718761517, 'out-in': -0.07202068872957698, 'out-out': -0.06910618411247664}\n",
+      "{'in-in': -0.06537929984057954, 'in-out': -0.06218986718761482, 'out-in': -0.07202068872957709, 'out-out': -0.06910618411247685}\n",
       "\n",
       "WDN_1994.txt.graphml\n",
-      "{'in-in': -0.07868988970611746, 'in-out': -0.07622523439269692, 'out-in': -0.0802250161794804, 'out-out': -0.078001430588214}\n",
+      "{'in-in': -0.07868988970611772, 'in-out': -0.07622523439269717, 'out-in': -0.08022501617948043, 'out-out': -0.07800143058821403}\n",
       "\n",
       "WDN_1995.txt.graphml\n",
-      "{'in-in': -0.07921393553292676, 'in-out': -0.07702100817504186, 'out-in': -0.0783064580195059, 'out-out': -0.07638722326404544}\n",
+      "{'in-in': -0.0792139355329263, 'in-out': -0.07702100817504144, 'out-in': -0.07830645801950548, 'out-out': -0.07638722326404507}\n",
       "\n",
       "WDN_1996.txt.graphml\n",
-      "{'in-in': -0.07686964594097984, 'in-out': -0.07546909805023216, 'out-in': -0.07535502512416258, 'out-out': -0.07420828746119353}\n",
+      "{'in-in': -0.07686964594098, 'in-out': -0.07546909805023236, 'out-in': -0.07535502512416256, 'out-out': -0.07420828746119355}\n",
       "\n",
       "WDN_1997.txt.graphml\n",
-      "{'in-in': -0.07368635207387715, 'in-out': -0.07132955497657793, 'out-in': -0.07171683897072381, 'out-out': -0.06970079872009392}\n",
+      "{'in-in': -0.07368635207387711, 'in-out': -0.07132955497657785, 'out-in': -0.07171683897072381, 'out-out': -0.0697007987200939}\n",
       "\n",
       "WDN_1998.txt.graphml\n",
-      "{'in-in': -0.06557057818395712, 'in-out': -0.06540616504184202, 'out-in': -0.06572057397949534, 'out-out': -0.06583617855060381}\n",
+      "{'in-in': -0.06557057818395669, 'in-out': -0.06540616504184156, 'out-in': -0.06572057397949511, 'out-out': -0.06583617855060357}\n",
       "\n",
       "WDN_1999.txt.graphml\n",
-      "{'in-in': -0.06360116568177317, 'in-out': -0.06507198196482505, 'out-in': -0.06546711179930208, 'out-out': -0.0673072042120859}\n",
+      "{'in-in': -0.06360116568177343, 'in-out': -0.06507198196482533, 'out-in': -0.06546711179930223, 'out-out': -0.06730720421208605}\n",
       "\n",
       "WDN_2000.txt.graphml\n",
-      "{'in-in': -0.06319707174975461, 'in-out': -0.06467170213846406, 'out-in': -0.06539073425903168, 'out-out': -0.0673007260706188}\n",
+      "{'in-in': -0.06319707174975438, 'in-out': -0.06467170213846388, 'out-in': -0.06539073425903164, 'out-out': -0.06730072607061882}\n",
       "\n",
       "WDN_2001.txt.graphml\n",
-      "{'in-in': -0.060016931181439456, 'in-out': -0.06117823973226681, 'out-in': -0.06192625961852599, 'out-out': -0.06348734473716477}\n",
+      "{'in-in': -0.0600169311814398, 'in-out': -0.06117823973226724, 'out-in': -0.06192625961852603, 'out-out': -0.06348734473716489}\n",
       "\n",
       "WDN_2002.txt.graphml\n",
-      "{'in-in': -0.06019317176336738, 'in-out': -0.06079556466349731, 'out-in': -0.06303814946654528, 'out-out': -0.0641787215968683}\n",
+      "{'in-in': -0.06019317176336751, 'in-out': -0.060795564663497434, 'out-in': -0.06303814946654597, 'out-out': -0.06417872159686895}\n",
       "\n"
      ]
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,18 +131,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "strengths = {}\n",
-    "for graph_name, G in graph_names.items():\n",
+    "for graph_name, G in graphs.items():\n",
     "    strengths[graph_name] = calc_strengths(G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "solution error = 1111366594563.3643\n"
+      "solution error = 342170931526.97955\n"
      ]
     },
     {
@@ -202,7 +202,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "solution error = 565175711638.1216\n"
+      "solution error = 1381841971715.0312\n"
      ]
     },
     {
@@ -218,45 +218,45 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "solution error = 618582681137.7123\n",
+      "solution error = 361143953967.5722\n",
       "\n",
-      "solution error = 680534609415.5154\n",
+      "solution error = 679462262765.5342\n",
       "\n",
-      "solution error = 406267229844.4789\n",
+      "solution error = 406386142487.4309\n",
       "\n",
-      "solution error = 795337764411.6774\n",
+      "solution error = 761806139524.4481\n",
       "\n",
-      "solution error = 2212613944206.505\n",
+      "solution error = 451961251313.1116\n",
       "\n",
-      "solution error = 902504340601.9164\n",
+      "solution error = 902983500312.081\n",
       "\n",
-      "solution error = 471546285600.65625\n",
+      "solution error = 471632911019.99615\n",
       "\n",
-      "solution error = 937700911957.3456\n",
+      "solution error = 937473724280.7407\n",
       "\n",
-      "solution error = 505243847679.2653\n",
+      "solution error = 505568368948.58215\n",
       "\n",
-      "solution error = 1000051003322.4402\n",
+      "solution error = 856650708884.7527\n",
       "\n",
-      "solution error = 532408974723.23083\n",
+      "solution error = 536841916893.9449\n",
       "\n",
-      "solution error = 1028259598577.9904\n",
+      "solution error = 1034340887193.486\n",
       "\n",
-      "solution error = 559570770635.5127\n",
+      "solution error = 560811717709.2382\n",
       "\n",
-      "solution error = 1036898905325.3878\n",
+      "solution error = 1035634685985.0342\n",
       "\n",
-      "solution error = 591015936649.6942\n",
+      "solution error = 591456524424.0684\n",
       "\n",
-      "solution error = 1084140190431.4625\n",
+      "solution error = 1084523026553.6329\n",
       "\n",
-      "solution error = 586195997858.161\n",
+      "solution error = 585941885153.3229\n",
       "\n",
-      "solution error = 1085755750748.8038\n",
+      "solution error = 1086240870419.0968\n",
       "\n",
-      "solution error = 592785992509.1354\n",
+      "solution error = 592614877917.4326\n",
       "\n",
-      "solution error = 3178226031387.385\n"
+      "solution error = 1059847089199.4514\n"
      ]
     }
    ],
@@ -264,7 +264,7 @@
     "decms = {}\n",
     "uecms = {}\n",
     "\n",
-    "for graph_name, G in graph_names.items():\n",
+    "for graph_name, G in graphs.items():\n",
     "    # Directed Enhanced Configuration Model\n",
     "    out_degree = np.array([G.out_degree(node) for node in G.nodes()])\n",
     "    in_degree = np.array([G.in_degree(node) for node in G.nodes()])\n",
@@ -305,24 +305,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WDN_1992.txt.graphml | DECM | error degree 2.3552786387881497e-09 | error strength 1111366594563.3643\n",
-      "WDN_1993.txt.graphml | DECM | error degree 5.495230936958251e-09 | error strength 618582681137.7123\n",
-      "WDN_1994.txt.graphml | DECM | error degree 3.733834574859429e-09 | error strength 406267229844.4789\n",
-      "WDN_1995.txt.graphml | DECM | error degree 3.0578668486214156e-09 | error strength 2212613944206.505\n",
-      "WDN_1996.txt.graphml | DECM | error degree 2.7055371276674123e-09 | error strength 471546285600.65625\n",
-      "WDN_1997.txt.graphml | DECM | error degree 3.1945148748491192e-09 | error strength 505243847679.2653\n",
-      "WDN_1998.txt.graphml | DECM | error degree 6.2923675159254344e-09 | error strength 532408974723.23083\n",
-      "WDN_1999.txt.graphml | DECM | error degree 1.6762555787863676e-09 | error strength 559570770635.5127\n",
-      "WDN_2000.txt.graphml | DECM | error degree 2.6565558641777898e-09 | error strength 591015936649.6942\n",
-      "WDN_2001.txt.graphml | DECM | error degree 2.834315893096573e-09 | error strength 586195997858.161\n",
-      "WDN_2002.txt.graphml | DECM | error degree 1.8142891633488034e-09 | error strength 592785992509.1354\n"
+      "WDN_1992.txt.graphml | DECM | error degree 1.8075070329359733e-09 | error strength 342170931526.97955\n",
+      "WDN_1993.txt.graphml | DECM | error degree 4.416602195078667e-09 | error strength 361143953967.5722\n",
+      "WDN_1994.txt.graphml | DECM | error degree 3.238863399701586e-09 | error strength 406386142487.4309\n",
+      "WDN_1995.txt.graphml | DECM | error degree 4.298836842053788e-09 | error strength 451961251313.1116\n",
+      "WDN_1996.txt.graphml | DECM | error degree 3.480039367786958e-09 | error strength 471632911019.99615\n",
+      "WDN_1997.txt.graphml | DECM | error degree 3.8380605360543996e-09 | error strength 505568368948.58215\n",
+      "WDN_1998.txt.graphml | DECM | error degree 3.129770220766659e-09 | error strength 536841916893.9449\n",
+      "WDN_1999.txt.graphml | DECM | error degree 3.4925164982269052e-09 | error strength 560811717709.2382\n",
+      "WDN_2000.txt.graphml | DECM | error degree 2.195804427174153e-09 | error strength 591456524424.0684\n",
+      "WDN_2001.txt.graphml | DECM | error degree 4.751480986442402e-09 | error strength 585941885153.3229\n",
+      "WDN_2002.txt.graphml | DECM | error degree 2.3185613429177465e-09 | error strength 592614877917.4326\n"
      ]
     }
    ],
@@ -333,24 +333,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WDN_1992.txt.graphml | UECM | error degree 96.89562083492052 | error strength 565175711638.1216\n",
-      "WDN_1993.txt.graphml | UECM | error degree 107.5360278133345 | error strength 680534609415.5154\n",
-      "WDN_1994.txt.graphml | UECM | error degree 122.9660958756984 | error strength 795337764411.6774\n",
-      "WDN_1995.txt.graphml | UECM | error degree 127.68329747537295 | error strength 902504340601.9164\n",
-      "WDN_1996.txt.graphml | UECM | error degree 108.0 | error strength 937700911957.3456\n",
-      "WDN_1997.txt.graphml | UECM | error degree 116.00000059523379 | error strength 1000051003322.4402\n",
-      "WDN_1998.txt.graphml | UECM | error degree 140.52403357710588 | error strength 1028259598577.9904\n",
-      "WDN_1999.txt.graphml | UECM | error degree 126.13049619828516 | error strength 1036898905325.3878\n",
-      "WDN_2000.txt.graphml | UECM | error degree 125.00000000003268 | error strength 1084140190431.4625\n",
-      "WDN_2001.txt.graphml | UECM | error degree 127.00004531106859 | error strength 1085755750748.8038\n",
-      "WDN_2002.txt.graphml | UECM | error degree 120.62886867892462 | error strength 3178226031387.385\n"
+      "WDN_1992.txt.graphml | UECM | error degree 124.21369312406016 | error strength 1381841971715.0312\n",
+      "WDN_1993.txt.graphml | UECM | error degree 66.35767860435311 | error strength 679462262765.5342\n",
+      "WDN_1994.txt.graphml | UECM | error degree 86.0 | error strength 761806139524.4481\n",
+      "WDN_1995.txt.graphml | UECM | error degree 104.0 | error strength 902983500312.081\n",
+      "WDN_1996.txt.graphml | UECM | error degree 109.9999999912223 | error strength 937473724280.7407\n",
+      "WDN_1997.txt.graphml | UECM | error degree 118.13107119866308 | error strength 856650708884.7527\n",
+      "WDN_1998.txt.graphml | UECM | error degree 121.0 | error strength 1034340887193.486\n",
+      "WDN_1999.txt.graphml | UECM | error degree 124.00000004835658 | error strength 1035634685985.0342\n",
+      "WDN_2000.txt.graphml | UECM | error degree 125.0 | error strength 1084523026553.6329\n",
+      "WDN_2001.txt.graphml | UECM | error degree 129.19936834366516 | error strength 1086240870419.0968\n",
+      "WDN_2002.txt.graphml | UECM | error degree 122.9999999999844 | error strength 1059847089199.4514\n"
      ]
     }
    ],
@@ -696,7 +696,7 @@
     "        plt.grid(True)\n",
     "        plt.show()\n",
     "\n",
-    "plot_strength_assortativity_over_time(graph_names, strength_assortativities, decm_sample_networks, decm_sample_networks_strength_assortativity_avg_std)\n"
+    "plot_strength_assortativity_over_time(graphs, strength_assortativities, decm_sample_networks, decm_sample_networks_strength_assortativity_avg_std)\n"
    ]
   },
   {
@@ -740,7 +740,7 @@
     "import numpy as np\n",
     "\n",
     "# Assuming you have obtained these values from your calculations\n",
-    "graph_names = [\"WDN_2000.txt.graphml\", \"WDN_2001.txt.graphml\", \"WDN_2002.txt.graphml\"]  # Replace with your actual years\n",
+    "graphs = [\"WDN_2000.txt.graphml\", \"WDN_2001.txt.graphml\", \"WDN_2002.txt.graphml\"]  # Replace with your actual years\n",
     "real_values = strength_assortativities  # Replace with your actual observed strength assortativities\n",
     "decm_avg_std_values = decm_sample_networks_strength_assortativity_avg_std # Replace with your calculated average and standard deviation values\n",
     "uecm_avg_std_values = uecm_sample_networks_strength_assortativity_avg_std # Replace with your calculated average and standard deviation values\n",
@@ -750,13 +750,13 @@
     "def plot_strength_assortativity(assortativity_type):\n",
     "    key = f\"{assortativity_type[0]}-{assortativity_type[1]}\"\n",
     "\n",
-    "    real_data = np.array([real_values[graph_name][key] for graph_name in graph_names])\n",
-    "    decm_avg_data = np.array([decm_avg_std_values[graph_name][key]['average'] for graph_name in graph_names])\n",
-    "    decm_std_data = np.array([decm_avg_std_values[graph_name][key]['standard deviation'] for graph_name in graph_names])\n",
-    "    uecm_avg_data = np.array([uecm_avg_std_values[graph_name]['undirected']['average'] for graph_name in graph_names])\n",
-    "    uecm_std_data = np.array([uecm_avg_std_values[graph_name]['undirected']['standard deviation'] for graph_name in graph_names])\n",
+    "    real_data = np.array([real_values[graph_name][key] for graph_name in graphs])\n",
+    "    decm_avg_data = np.array([decm_avg_std_values[graph_name][key]['average'] for graph_name in graphs])\n",
+    "    decm_std_data = np.array([decm_avg_std_values[graph_name][key]['standard deviation'] for graph_name in graphs])\n",
+    "    uecm_avg_data = np.array([uecm_avg_std_values[graph_name]['undirected']['average'] for graph_name in graphs])\n",
+    "    uecm_std_data = np.array([uecm_avg_std_values[graph_name]['undirected']['standard deviation'] for graph_name in graphs])\n",
     "\n",
-    "    years = [re.search(r'\\d+', graph_name).group() for graph_name in graph_names]\n",
+    "    years = [re.search(r'\\d+', graph_name).group() for graph_name in graphs]\n",
     "\n",
     "    plt.plot(years, real_data, label='Observed', linestyle='-')\n",
     "    plt.errorbar(years, decm_avg_data, yerr=decm_std_data, label='DCEM Average', marker='o', linestyle='--')\n",
