--- a/Assignment 3/2 Stock correlations/main.ipynb
+++ b/Assignment 3/2 Stock correlations/main.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -96,22 +96,22 @@
      "output_type": "stream",
      "text": [
       "Degree distribution for the MST of cormat_1h.npy: {0: 1, 1: 1, 2: 1, 3: 1, 4: 1, 5: 1, 6: 2, 7: 2, 8: 3, 9: 3, 10: 3, 11: 1, 12: 1, 13: 1, 14: 3, 15: 4, 16: 1, 17: 1, 18: 2, 19: 1, 20: 1, 21: 1, 22: 2, 23: 1, 24: 1, 25: 2, 26: 1, 27: 2, 28: 9, 29: 1, 30: 3, 31: 1, 32: 1, 33: 2, 34: 1, 35: 1, 36: 1, 37: 1, 38: 2, 39: 1, 40: 5, 41: 3, 42: 1, 43: 2, 44: 6, 45: 4, 46: 1, 47: 1, 48: 8, 49: 1, 50: 1, 51: 1, 52: 5, 53: 5, 54: 1, 55: 1, 56: 1, 57: 2, 58: 2, 59: 1, 60: 2, 61: 1, 62: 4, 63: 4, 64: 1, 65: 1, 66: 1, 67: 1, 68: 1, 69: 1, 70: 2, 71: 2, 72: 1, 73: 2, 74: 2, 75: 1, 76: 3, 77: 1, 78: 1, 79: 2, 80: 1, 81: 2, 82: 2, 83: 1, 84: 3, 85: 1, 86: 1, 87: 2, 88: 1, 89: 5, 90: 3, 91: 3, 92: 3, 93: 1, 94: 2, 95: 2, 96: 4}\n",
-      "5 stocks with highest degree for the MST of cormat_1h.npy: ['DIS', 'HON', 'GOOG', 'GD', 'JNJ']\n",
+      "5 stocks with the highest degree for the MST of cormat_1h.npy: [('DIS', 9), ('HON', 8), ('GOOG', 6), ('GD', 5), ('JNJ', 5)]\n",
       "\n",
       "Degree distribution for the MST of cormat_1m.npy: {0: 1, 1: 1, 2: 1, 3: 1, 4: 2, 5: 1, 6: 3, 7: 1, 8: 1, 9: 1, 10: 1, 11: 2, 12: 1, 13: 1, 14: 1, 15: 1, 16: 3, 17: 2, 18: 1, 19: 1, 20: 2, 21: 5, 22: 6, 23: 1, 24: 1, 25: 1, 26: 2, 27: 3, 28: 5, 29: 1, 30: 1, 31: 1, 32: 1, 33: 10, 34: 1, 35: 1, 36: 3, 37: 1, 38: 1, 39: 1, 40: 5, 41: 1, 42: 1, 43: 1, 44: 2, 45: 1, 46: 1, 47: 1, 48: 26, 49: 1, 50: 2, 51: 2, 52: 3, 53: 6, 54: 1, 55: 1, 56: 1, 57: 1, 58: 2, 59: 1, 60: 1, 61: 2, 62: 3, 63: 1, 64: 2, 65: 1, 66: 4, 67: 1, 68: 1, 69: 1, 70: 2, 71: 1, 72: 1, 73: 1, 74: 2, 75: 1, 76: 2, 77: 1, 78: 2, 79: 1, 80: 1, 81: 2, 82: 2, 83: 1, 84: 2, 85: 1, 86: 1, 87: 2, 88: 1, 89: 2, 90: 1, 91: 2, 92: 1, 93: 1, 94: 1, 95: 3, 96: 2}\n",
-      "5 stocks with highest degree for the MST of cormat_1m.npy: ['HON', 'EMR', 'COP', 'JPM', 'COF']\n",
+      "5 stocks with the highest degree for the MST of cormat_1m.npy: [('HON', 26), ('EMR', 10), ('COP', 6), ('JPM', 6), ('COF', 5)]\n",
       "\n",
       "Degree distribution for the MST of cormat_gaussian_1h.npy: {0: 4, 1: 2, 2: 1, 3: 1, 4: 1, 5: 1, 6: 4, 7: 1, 8: 1, 9: 1, 10: 3, 11: 2, 12: 1, 13: 3, 14: 1, 15: 3, 16: 2, 17: 3, 18: 2, 19: 1, 20: 1, 21: 1, 22: 1, 23: 2, 24: 1, 25: 4, 26: 1, 27: 1, 28: 3, 29: 1, 30: 1, 31: 6, 32: 2, 33: 3, 34: 2, 35: 1, 36: 2, 37: 3, 38: 3, 39: 1, 40: 1, 41: 2, 42: 2, 43: 1, 44: 1, 45: 1, 46: 3, 47: 1, 48: 4, 49: 4, 50: 1, 51: 3, 52: 2, 53: 1, 54: 1, 55: 2, 56: 3, 57: 1, 58: 2, 59: 1, 60: 2, 61: 1, 62: 3, 63: 3, 64: 2, 65: 2, 66: 3, 67: 1, 68: 5, 69: 2, 70: 2, 71: 1, 72: 2, 73: 3, 74: 1, 75: 1, 76: 1, 77: 3, 78: 1, 79: 3, 80: 2, 81: 1, 82: 3, 83: 3, 84: 1, 85: 2, 86: 1, 87: 1, 88: 4, 89: 1, 90: 1, 91: 1, 92: 3, 93: 4, 94: 3, 95: 3, 96: 1}\n",
-      "5 stocks with highest degree for the MST of cormat_gaussian_1h.npy: ['EBAY', 'MSFT', 'AAPL', 'AMGN', 'CVS']\n",
+      "5 stocks with the highest degree for the MST of cormat_gaussian_1h.npy: [('EBAY', 6), ('MSFT', 5), ('AAPL', 4), ('AMGN', 4), ('CVS', 4)]\n",
       "\n",
       "Degree distribution for the MST of cormat_gaussian_1m.npy: {0: 1, 1: 1, 2: 3, 3: 4, 4: 2, 5: 1, 6: 1, 7: 1, 8: 2, 9: 5, 10: 2, 11: 1, 12: 4, 13: 1, 14: 5, 15: 2, 16: 2, 17: 1, 18: 2, 19: 1, 20: 3, 21: 1, 22: 1, 23: 1, 24: 3, 25: 3, 26: 2, 27: 1, 28: 2, 29: 2, 30: 2, 31: 2, 32: 2, 33: 1, 34: 1, 35: 2, 36: 3, 37: 1, 38: 1, 39: 1, 40: 2, 41: 3, 42: 3, 43: 1, 44: 3, 45: 1, 46: 2, 47: 1, 48: 1, 49: 3, 50: 3, 51: 2, 52: 2, 53: 7, 54: 3, 55: 1, 56: 3, 57: 3, 58: 3, 59: 2, 60: 1, 61: 1, 62: 1, 63: 2, 64: 3, 65: 1, 66: 1, 67: 3, 68: 3, 69: 3, 70: 1, 71: 1, 72: 2, 73: 2, 74: 1, 75: 1, 76: 3, 77: 1, 78: 2, 79: 2, 80: 2, 81: 2, 82: 1, 83: 2, 84: 2, 85: 2, 86: 1, 87: 2, 88: 2, 89: 2, 90: 5, 91: 1, 92: 1, 93: 2, 94: 1, 95: 1, 96: 2}\n",
-      "5 stocks with highest degree for the MST of cormat_gaussian_1m.npy: ['JPM', 'APC', 'BIIB', 'UPS', 'ACN']\n",
+      "5 stocks with the highest degree for the MST of cormat_gaussian_1m.npy: [('JPM', 7), ('APC', 5), ('BIIB', 5), ('UPS', 5), ('ACN', 4)]\n",
       "\n",
       "Degree distribution for the MST of cormat_onefactor_1h.npy: {0: 1, 1: 1, 2: 2, 3: 1, 4: 2, 5: 3, 6: 2, 7: 2, 8: 1, 9: 2, 10: 3, 11: 2, 12: 2, 13: 1, 14: 2, 15: 2, 16: 2, 17: 1, 18: 1, 19: 1, 20: 2, 21: 1, 22: 1, 23: 1, 24: 1, 25: 1, 26: 1, 27: 1, 28: 6, 29: 2, 30: 1, 31: 1, 32: 1, 33: 1, 34: 1, 35: 1, 36: 1, 37: 1, 38: 1, 39: 2, 40: 1, 41: 10, 42: 1, 43: 1, 44: 4, 45: 1, 46: 1, 47: 1, 48: 1, 49: 6, 50: 1, 51: 1, 52: 3, 53: 1, 54: 1, 55: 1, 56: 1, 57: 2, 58: 1, 59: 1, 60: 1, 61: 1, 62: 4, 63: 37, 64: 1, 65: 1, 66: 1, 67: 1, 68: 3, 69: 1, 70: 2, 71: 1, 72: 1, 73: 3, 74: 1, 75: 1, 76: 1, 77: 1, 78: 1, 79: 1, 80: 1, 81: 2, 82: 1, 83: 1, 84: 1, 85: 1, 86: 1, 87: 3, 88: 2, 89: 4, 90: 2, 91: 1, 92: 1, 93: 1, 94: 1, 95: 1, 96: 2}\n",
-      "5 stocks with highest degree for the MST of cormat_onefactor_1h.npy: ['MMM', 'GE', 'DIS', 'HPQ', 'GOOG']\n",
+      "5 stocks with the highest degree for the MST of cormat_onefactor_1h.npy: [('MMM', 37), ('GE', 10), ('DIS', 6), ('HPQ', 6), ('GOOG', 4)]\n",
       "\n",
       "Degree distribution for the MST of cormat_onefactor_1m.npy: {0: 1, 1: 1, 2: 1, 3: 1, 4: 1, 5: 1, 6: 1, 7: 1, 8: 1, 9: 1, 10: 1, 11: 1, 12: 1, 13: 1, 14: 1, 15: 1, 16: 1, 17: 1, 18: 1, 19: 1, 20: 1, 21: 1, 22: 1, 23: 1, 24: 1, 25: 1, 26: 1, 27: 1, 28: 1, 29: 1, 30: 1, 31: 1, 32: 1, 33: 1, 34: 1, 35: 1, 36: 1, 37: 1, 38: 1, 39: 1, 40: 1, 41: 1, 42: 1, 43: 1, 44: 1, 45: 1, 46: 1, 47: 1, 48: 96, 49: 1, 50: 1, 51: 1, 52: 1, 53: 1, 54: 1, 55: 1, 56: 1, 57: 1, 58: 1, 59: 1, 60: 1, 61: 1, 62: 1, 63: 1, 64: 1, 65: 1, 66: 1, 67: 1, 68: 1, 69: 1, 70: 1, 71: 1, 72: 1, 73: 1, 74: 1, 75: 1, 76: 1, 77: 1, 78: 1, 79: 1, 80: 1, 81: 1, 82: 1, 83: 1, 84: 1, 85: 1, 86: 1, 87: 1, 88: 1, 89: 1, 90: 1, 91: 1, 92: 1, 93: 1, 94: 1, 95: 1, 96: 1}\n",
-      "5 stocks with highest degree for the MST of cormat_onefactor_1m.npy: ['HON', 'AAPL', 'ABBV', 'ABT', 'ACN']\n",
+      "5 stocks with the highest degree for the MST of cormat_onefactor_1m.npy: [('HON', 96), ('AAPL', 1), ('ABBV', 1), ('ABT', 1), ('ACN', 1)]\n",
       "\n"
      ]
     }
@@ -164,7 +164,9 @@
     "\n",
     "    # Print degree distribution and top 5 stocks\n",
     "    print(\"Degree distribution for the MST of \" + k + \":\", mst_degree_distribution)\n",
-    "    print(\"5 stocks with highest degree for the MST of \" + k + \":\", [MST.nodes[node[0]]['ticker'] for node in top_5_stocks])\n",
+    "    \n",
+    "    top_5_stocks_info = [(MST.nodes[node[0]]['ticker'], node[1]) for node in top_5_stocks]\n",
+    "    print(f\"5 stocks with the highest degree for the MST of {k}:\", top_5_stocks_info)\n",
     "    print()"
    ]
   },
