--- a/Assignment 3/1 ERGMs/main.ipynb
+++ b/Assignment 3/1 ERGMs/main.ipynb
@@ -56,6 +56,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Compute the strength assortativity coefficient on the data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
@@ -110,6 +117,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Fit the Undirected Enhanced CM and Directed Enhanced CM using the CReMa method"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -145,45 +159,7 @@
     "        max_steps=10000,\n",
     "        verbose=False,\n",
     "    )\n",
-    "    return dir_graph_weighted\n",
-    "\n",
-    "#for graph_name, G in graphs.items():\n",
-    "#    # Directed Enhanced Configuration Model\n",
-    "#    out_degree = np.array([G.out_degree(node) for node in G.nodes()])\n",
-    "#    in_degree = np.array([G.in_degree(node) for node in G.nodes()])\n",
-    "#\n",
-    "#    out_strength = np.array(list(strengths[graph_name][\"out\"].values()))\n",
-    "#    in_strength = np.array(list(strengths[graph_name][\"in\"].values()))\n",
-    "#\n",
-    "#    # We can initialiase our graph instance with degree and strength sequence\n",
-    "#    graph_weighted = nem.DirectedGraph(\n",
-    "#        degree_sequence=np.concatenate([out_degree, in_degree]),\n",
-    "#        strength_sequence=np.concatenate([out_strength, in_strength]),\n",
-    "#    )\n",
-    "#    graph_weighted.solve_tool(\n",
-    "#        model=\"crema\",\n",
-    "#        method=\"newton\",\n",
-    "#        initial_guess=\"random\",\n",
-    "#        adjacency=\"dcm_exp\",\n",
-    "#        method_adjacency=\"newton\",\n",
-    "#    )\n",
-    "#    decms[graph_name] = graph_weighted\n",
-    "#\n",
-    "#    # Undirected Enhanced Configuration Model\n",
-    "#    degree_seq = out_degree + in_degree\n",
-    "#    strength_seq = out_strength + in_strength\n",
-    "#\n",
-    "#    graph_weighted = nem.UndirectedGraph(\n",
-    "#        degree_sequence=degree_seq, strength_sequence=strength_seq\n",
-    "#    )\n",
-    "#    graph_weighted.solve_tool(\n",
-    "#        model=\"crema\",\n",
-    "#        method=\"newton\",\n",
-    "#        initial_guess=\"random\",\n",
-    "#        adjacency=\"cm_exp\",\n",
-    "#        method_adjacency=\"newton\",\n",
-    "#    )\n",
-    "#    uecms[graph_name] = graph_weighted"
+    "    return dir_graph_weighted"
    ]
   },
   {
@@ -316,6 +292,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Sample 30 networks from the obtained ERGM distributions and measure the strength assortativity on all of them."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -422,6 +405,13 @@
     "        strength_assortativity_avg_std[key][\"average\"] = np.mean([v[key] for v in strength_assortativities])\n",
     "        strength_assortativity_avg_std[key][\"standard deviation\"] = np.std([v[key] for v in strength_assortativities])\n",
     "    return strength_assortativity_avg_std"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Calculate average and standard deviation of each assortativity typology."
    ]
   },
   {
@@ -557,6 +547,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Plot strength assortativity as a function of time (the WTW network year), comparing the observed real value with the average and error bars obtained from the samples samples."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 107,
    "metadata": {},
@@ -624,6 +621,13 @@
     "\n",
     "for assortativity_type in [(\"in\", \"in\"), (\"in\", \"out\"), (\"out\", \"out\")]:\n",
     "    plot_strength_assortativity(assortativity_type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Write a short paragraph to comment on the interpretation of strength assortativity for this dataset, and about the conclusions you can draw via the inference you made using the ERGM models."
    ]
   }
  ],
