--- a/Assignment 3/2 Stock correlations/main.ipynb
+++ b/Assignment 3/2 Stock correlations/main.ipynb
@@ -30,6 +30,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Is there a market mode at the minute and hour timescale?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -83,7 +90,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the eigenvalues, there is a market mode for cormat_1h.npy, cormat_1m.npy, cormat_onefactor_1h.npy and cormat_onefactor_1m.npy."
+    "According to the eigenvalue gaps, there is a market mode for cormat_1h.npy, cormat_1m.npy, cormat_onefactor_1h.npy and cormat_onefactor_1m.npy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Compute the degree distributions of the 1 hour and 1 minute MSTs. Which are the 5 stocks with highest degree on the two different timescales MST?"
    ]
   },
   {
@@ -168,6 +182,13 @@
     "    top_5_stocks_info = [(MST.nodes[node[0]]['ticker'], node[1]) for node in top_5_stocks]\n",
     "    print(f\"5 stocks with the highest degree for the MST of {k}:\", top_5_stocks_info)\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Plot the degree distributions at 1 minute and 1 hour. Are the degree distributions qualitatively the same? Provide a comment to explain eventual similarities or dissimilarities."
    ]
   },
   {
@@ -342,6 +363,13 @@
     "    plot_log_log_mst_degree_distribution(v)\n",
     "    plt.title(\"Log-Log Degree distribution for MST of \" + k)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Compare the MST degree distributions of the 1 hour, 1 minute, Normal and One-Factor correlations: for each time scale, plot the three different distributions on the same plot. Is the degree distribution of MSTs well reproduced by the null Gaussian and One-Factor models?"
    ]
   },
   {
